# PackageDroneRL

./: .dockerignore  Dockerfile  README.md  __init__.py  app.py  client.py  environment.py  example_usage.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
frontend/: app.js  index.html  renderer.js  style.css
server/: __init__.py  app.py
server/Tasks/: task_1_easy_03bc5503.json  task_1_easy_7757b977.json  task_4_expert_633d0f33.json  task_4_expert_899ac781.json
