[project]
name = "drone-delivery-rl"
version = "2.0.0"
description = "Drone Delivery RL OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "starlette>=0.36.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
openenv = ["openenv-core>=0.2.0"]

[project.scripts]
server = "app:main"
drone-delivery-rl = "app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
